--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "build:tailwind": "tailwindcss -i ./styles/input.css -o ./styles/output.css --watch"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.6",
     "ethers": "^6.15.0",
     "lightweight-charts": "^4.1.1",
     "next": "15.4.1",
@@ -24,7 +24,8 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "postcss-import": "^16.1.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   },
   "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
